@@ -80,8 +80,6 @@
 
 # Set this to YES if you want to limit the word wrap width to the viewport
 # width (may be useful for iPAQ)
-# *** NOT HOOKED UP YET ***
-#
 #limit_text_width=NO
 
 
